# OCCOM

./: .gitattributes  .gitignore  README.md  ai_integrity_assistant.md  ai_integrity_assistant_mvp_plan_final.md  bot_config_sample.json  full assestment.md  metadata.json
.platform/pipelines/: azure-backend-pipelines.yml  azure-frontend-pipelines.yml
backend/: .dockerignore  .env.sample  Dockerfile  config.py  content_endpoints.py  default-config.json  main.py  pyproject.toml
backend/manager/: rag_orchestration.py  task_based_processor.py  task_manager.py
backend/model/: __init__.py  apis.py  chat_models.py  file_models.py  health_models.py
backend/service/: auth.py  azure_ai_search.py  blob_storage.py  chat_history.py  file_processor.py  indexer.py  llm_client.py  memory_manager.py  middleware.py  session_share.py  utils.py
frontend/: .dockerignore  .env.sample  Dockerfile  __init__.py  changelog.json  main.py  metadata_template.xlsx  pyproject.toml  readme.md  settings.py  utils.py
frontend/apis_calls/: __init__.py  admin_apis.py  chat_apis.py  session_apis.py  stats_api.py  superadmin_apis.py
frontend/components/: session_sidebar.py  ui_components_chat.py
frontend/manager/: tab_manager.py
frontend/navigation/: chat.py  config.py  fileviewer.py  loginpage.py  pdf_viewer.py  shared_session.py  stats.py  uploads.py
